exports[`toIdentityVector > CommissaireComptesMandataire - Personne morale COMMISSAIRE 1`] = `
{
  "birthcountry": null,
  "birthdate": null,
  "birthplace": null,
  "family_name": null,
  "gender": null,
  "given_name": null
}
`;

exports[`toIdentityVector > JohnSmithMandataire - US COMMISSAIRE 1`] = `
{
  "birthcountry": "99404",
  "birthdate": "1985-01-01T00:00:00.000Z",
  "birthplace": null,
  "family_name": "SMITH",
  "gender": null,
  "given_name": "John"
}
`;

exports[`toIdentityVector > KarimaAknineMandataire - French DIRIGEANT 1`] = `
{
  "birthcountry": "99100",
  "birthdate": "1999-07-15T00:00:00.000Z",
  "birthplace": null,
  "family_name": "AKNINE",
  "gender": null,
  "given_name": "Karima"
}
`;

exports[`toIdentityVector > MarieLeblancMandataire - French PRESIDENT 1`] = `
{
  "birthcountry": "99100",
  "birthdate": "1988-01-01T00:00:00.000Z",
  "birthplace": null,
  "family_name": "LEBLANC",
  "gender": null,
  "given_name": "Marie"
}
`;

exports[`toIdentityVector > PierreDurandMandataire - French DIRECTEUR GENERAL 1`] = `
{
  "birthcountry": "99100",
  "birthdate": "1991-01-01T00:00:00.000Z",
  "birthplace": null,
  "family_name": "DURAND",
  "gender": null,
  "given_name": "Pierre"
}
`;

exports[`toIdentityVector > RogalDornMandataire - Edge case (futuristic) 1`] = `
{
  "birthcountry": null,
  "birthdate": "+029000-01-07T00:00:00.000Z",
  "birthplace": null,
  "family_name": "DORN",
  "gender": null,
  "given_name": "ROGAL"
}
`;

exports[`toIdentityVector > SocietePresidenteMandataire - Personne morale PRESIDENT 1`] = `
{
  "birthcountry": null,
  "birthdate": null,
  "birthplace": null,
  "family_name": null,
  "gender": null,
  "given_name": null
}
`;

exports[`toIdentityVector > SophieMartinMandataire - French GERANT 1`] = `
{
  "birthcountry": "99100",
  "birthdate": "1996-01-01T00:00:00.000Z",
  "birthplace": null,
  "family_name": "MARTIN",
  "gender": null,
  "given_name": "Sophie"
}
`;

exports[`toIdentityVector > StevensCheronMandataire - French DIRIGEANT 1`] = `
{
  "birthcountry": "99100",
  "birthdate": "1979-11-12T00:00:00.000Z",
  "birthplace": null,
  "family_name": "CHERON",
  "gender": null,
  "given_name": "Stevens"
}
`;

exports[`toIdentityVector > UlysseToriMandataire - French DIRIGEANT 1`] = `
{
  "birthcountry": "99100",
  "birthdate": "1992-09-07T00:00:00.000Z",
  "birthplace": null,
  "family_name": "TOSI",
  "gender": null,
  "given_name": "Ulysse"
}
`;
